kubernetes/apps/default/photos-web/app/app.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: photos-web
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photos-web
  template:
    metadata:
      labels:
        app: photos-web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: photos-web
          image: 'filebrowser/filebrowser:v2.33.2@sha256:57a7a972787ae64ca4d26c2c3cb2cdd05f258e8aca250ade6ea2c206341c03bd'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: db
              mountPath: /database
            - name: photos
              mountPath: /srv
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: photos-web
        - name: photos
          nfs:
            server: nas.dnhrrs.xyz
            path: /volume1/Photos
            readOnly: true

---
kind: Service
apiVersion: v1
metadata:
  name: photos-web
  namespace: default
spec:
  selector:
    app: photos-web
  ports:
    - name: http
      port: 80
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: photos-web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: |-
        http://authentik-server.default.svc.cluster.local/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://photos.cluster.dnhrrs.xyz/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx-internal
  rules:
    - host: photos.cluster.dnhrrs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photos-web
                port:
                  name: http
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
